--- a/requirements/base.in
+++ b/requirements/base.in
@@ -2,4 +2,6 @@
 -c constraints.txt
 
 Django             # Web application framework
-
+openedx-events>=5.0.0                   # Events API
+edx_django_utils
+edx_toggles
