--- a/openedx.yaml
+++ b/openedx.yaml
@@ -13,3 +13,8 @@ oeps:
     oep-18: true
     oep-30:
         state: true
+openedx-release:
+    # The openedx-release key is described in OEP-10:
+    #   https://open-edx-proposals.readthedocs.io/en/latest/oep-0010-proc-openedx-releases.html
+    # The FAQ might also be helpful: https://openedx.atlassian.net/wiki/spaces/COMM/pages/1331268879/Open+edX+Release+FAQ
+    ref: main
