--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py38-django{32,40}
+envlist = py{38,39,310,311,312}-django{42}
 
 [pycodestyle]
 exclude = .git,.tox,migrations
@@ -32,8 +32,7 @@ norecursedirs = .* docs requirements site-packages
 
 [testenv]
 deps =
-    django32: Django>=3.2,<4.0
-    django40: Django>=4.0,<4.1
+    django42: Django>=4.2,<4.3
     -r{toxinidir}/requirements/test.txt
 commands =
     python manage.py check
