chore: fix test cases

--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,7 @@ norecursedirs = .* docs requirements site-packages
 [testenv]
 deps =
     django42: Django>=4.2,<5.0
+    setuptools
     -r{toxinidir}/requirements/test.txt
 commands =
     python manage.py check
@@ -63,6 +64,7 @@ allowlist_externals =
     rm
     touch
 deps =
+    setuptools
     -r{toxinidir}/requirements/quality.txt
 commands =
     touch tests/__init__.py
