Running tests using python 3.12 (#81)
* chore: update python version to support tests with 3.12

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py38-django{32,40}
+envlist = py{38,312}-django{42}
 
 [pycodestyle]
 exclude = .git,.tox,migrations
@@ -32,8 +32,8 @@ norecursedirs = .* docs requirements site-packages
 
 [testenv]
 deps =
-    django32: Django>=3.2,<4.0
-    django40: Django>=4.0,<4.1
+    django42: Django>=4.2,<5.0
+    setuptools
     -r{toxinidir}/requirements/test.txt
 commands =
     python manage.py check
@@ -64,6 +64,7 @@ allowlist_externals =
     rm
     touch
 deps =
+    setuptools
     -r{toxinidir}/requirements/quality.txt
 commands =
     touch tests/__init__.py
