build: Bulid requiremnets and docs using python 3.12
* Update tox.ini so that runing just `tox` will run docs and quality
  tests as well.

* Update the `upgrade-python-requirements.yml` workflow to run the
  upgrade job using python 3.12

* Update the `ci.yml` workflow to skip running the docs build on python
  3.8, we don't need to do both we can just build with 3.12 starting
  now.

* Update `.readthedocs.yml` so that RTD will start using 3.12

--- a/.github/workflows/upgrade-python-requirements.yml
+++ b/.github/workflows/upgrade-python-requirements.yml
@@ -9,6 +9,7 @@ on:
          description: 'Target branch to create requirements PR against'
          required: true
          default: 'main'
+         python_version: '3.12'
 jobs:
   call-upgrade-python-requirements-workflow:
     uses: openedx/.github/.github/workflows/upgrade-python-requirements.yml@master
