--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,9 @@ jobs:
         os: [ubuntu-20.04]
         python-version: ['3.8', '3.12']
         toxenv: [quality, docs, pii_check, django42]
+        exclude:
+          - python-version: '3.8'
+            toxenv: 'docs'
 
     steps:
     - uses: actions/checkout@v3
