--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{38,312}-django{42}
+envlist = py{38,312}-django{42}, docs, quality
 
 [pycodestyle]
 exclude = .git,.tox,migrations
