fix: move to ubuntu-latest

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,9 @@ on:
 jobs:
   run_tests:
     name: tests
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-24.04]
         python-version: ['3.11', '3.12']
         toxenv: [quality, docs, pii_check, django42]
 
