--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -12,6 +12,7 @@ metadata:
     # names that might be interested in changes to the architecture of this
     # component.
     openedx.org/arch-interest-groups: ""
+    openedx.org/release: "main"
 spec:
 
   # (Required) This can be a group(`group:<group_name>` or a user(`user:<github_username>`)
