chore: Add support for Django 5.2

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{311,312}-django{42}, docs, quality
+envlist = py{311,312}-django{42,52}, docs, quality
 
 [pycodestyle]
 exclude = .git,.tox,migrations
@@ -33,6 +33,7 @@ norecursedirs = .* docs requirements site-packages
 [testenv]
 deps =
     django42: Django>=4.2,<5.0
+    django52: Django>=5.2,<6.0
     setuptools
     -r{toxinidir}/requirements/test.txt
 commands =
@@ -82,4 +83,3 @@ deps =
     -r{toxinidir}/requirements/test.txt
 commands =
     code_annotations django_find_annotations --config_file .pii_annotations.yml --lint --report --coverage
-
