--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ max-line-length = 120
 ; D413 = Missing blank line after last section (numpy style)
 ; D414 = Section has no content (numpy style)
 ignore = D101,D200,D203,D212,D215,D404,D405,D406,D407,D408,D409,D410,D411,D412,D413,D414
-match-dir = (?!migrations)
+match-dir = (?!migrations).*
 
 [pytest]
 DJANGO_SETTINGS_MODULE = test_settings
